Attempting fix for incorrect image sizes on mobile

--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ li img.headerPictures {
     }
 
     div.card {
-        font-size: 70%;
+        font-size: 60%;
     }
 
 }
